I have attached an aged photo of myself.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,42 @@
   <script src="script.js" async></script>
 </head>
 <body>
-  <header></header>
+  <header>
+    <div class="nav">
+      <h1>İbrahim Koçak</h1>
+      <nav>
+        <ul role="presentation">
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    
+    <main>
+      <div class="aboutMe">
+        <h2>About Me</h2>
+        <img src="/images/yasliPhoto.JPG" alt="İbrahim Koçak's photo.">
+        <article>
+          <p>Hi. I'm İbrahim, a Turk philosopher and demander of knowledge.</p>
+        </article>
+      </div>      
+      <div class="projects">
+        <h2>Projects</h2>
+        <ul role="presentation">
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </div>
+      <div class="skills">
+        <h2>Skills</h2>
+      </div>
+    </main>
+    
+
+  </header>
   
 </body>
 </html>
