font family, img float, nav modification.

--- a/index.html
+++ b/index.html
@@ -4,33 +4,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>My Portfolio</title>
   <script src="script.js" async></script>
 </head>
 <body>
   <header>
-    <div class="nav">
-      <h1>İbrahim Koçak</h1>
+    <h1>İbrahim Koçak</h1>
+    <div class="nav">      
       <nav>
         <ul role="presentation">
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="#aboutMe">About Me</a></li>
+          <li><a href="#projects"><strong>Projects</strong></a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="/contact.html"><strong>Contact</strong></a></li>
         </ul>
       </nav>
     </div>
-    
-    <main>
-      <div class="aboutMe">
-        <h2>About Me</h2>
-        <img src="/images/yasliPhoto.JPG" alt="İbrahim Koçak's photo.">
-        <article>
-          <p>Hi. I'm İbrahim, a Turk philosopher and demander of knowledge.</p>
-        </article>
-      </div>      
-      <div class="projects">
+  </header>
+
+  <main>
+      <div id="aboutMe">
+        <img src="/images/yasliPhoto.JPG" alt="İbrahim Koçak's photo."> 
+        <div>
+          <h2>About Me</h2>          
+          <article>
+            <p>Hi. I'm İbrahim, a Turk philosopher and demander of knowledge.... ....... 
+              asdsdffaffaffasda afasf a fa asasd asffaf eeaff e qer E eag e gEG ....... .............</p>
+          </article>  
+        </div>      
+      </div>     
+
+      <div id="projects">
         <h2>Projects</h2>
         <ul role="presentation">
           <li><a href="#"></a></li>
@@ -38,13 +44,9 @@
           <li><a href="#"></a></li>
         </ul>
       </div>
-      <div class="skills">
+      <div id="skills">
         <h2>Skills</h2>
       </div>
-    </main>
-    
-
-  </header>
-  
+  </main>  
 </body>
 </html>
