connect to js file. link to second page and other detail css

--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@
       <div id="projects">
         <h2>Projects</h2>
         <ul role="presentation">
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a id="prj1" href="#">Hamidiye Bridge</a></li>
+            <div role="presentation" class="project" id="project1">
+              <p aria-label="Extra information about Hamidiye project."><img src="/images/hamidiyeBridge.jpg" alt="Hamidiye bridge from 19.century"></p>
+            </div>
+          <li><a id="prj2"  href="#">Cezeri Gadget</a></li>
+            <div role="presentation" class="project" id="project2">
+              <p aria-label="Extra information about cezeri_1 project."><img src="/images/cezeri1.jpg" alt="cezeri flying gadget photo"></p>
+            </div>
+          <li><a id="prj3"  href="#">Flying Family By Cezeri</a></li>
+            <div role="presentation" class="project" id="project3">
+              <p aria-label="Extra information about cezeri_2 project."><img src="/images/cezeri2.jpg" alt="cezeri flying family photo"></p>
+            </div>
         </ul>
       </div>
       <div id="skills">
