--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>My Portfolio Contact Page</title>
+  <script src="script.js" async></script>
 </head>
 <body>
+
+  <header>
+    <h1>İbrahim Koçak</h1>
+    <div class="nav">      
+      <nav>
+        <ul role="presentation">
+          <li><a href="#aboutMe">About Me</a></li>
+          <li><a href="#projects"><strong>Projects</strong></a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="/index.html"><strong>Main Page</strong></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   
 </body>
 </html>
