modified html, css and js files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <main>
       <div id="aboutMe">
-        <img src="/images/yasliPhoto.JPG" alt="İbrahim Koçak's photo."> 
+        <img id="old" src="/images/yasliPhoto.JPG" alt="İbrahim Koçak's photo."> 
         <div>
           <h2>About Me</h2>          
           <article>
