--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#aboutMe">About Me</a></li>
           <li><a href="#projects"><strong>Projects</strong></a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="./contact.html"><strong>Contact</strong></a></li>
+          <li><a href="contact.html"><strong>Contact</strong></a></li>
         </ul>
       </nav>
     </div>
@@ -26,7 +26,7 @@
 
   <main>
       <div id="aboutMe">
-        <img id="old" src="./images/yasliPhoto.JPG" alt="İbrahim Koçak's photo."> 
+        <img id="old" src="images/yasliPhoto.JPG" alt="İbrahim Koçak's photo."> 
         <div>
           <h2>About Me</h2>          
           <article>
@@ -41,15 +41,15 @@
         <ul role="presentation">
           <li><a id="prj1" href="#">Hamidiye Bridge</a></li>
             <div role="presentation" class="project" id="project1">
-              <p aria-label="Extra information about Hamidiye project."><img src="./images/hamidiyeBridge.jpg" alt="Hamidiye bridge from 19.century"></p>
+              <p aria-label="Extra information about Hamidiye project."><img src="images/hamidiyeBridge.jpg" alt="Hamidiye bridge from 19.century"></p>
             </div>
           <li><a id="prj2"  href="#">Cezeri Gadget</a></li>
             <div role="presentation" class="project" id="project2">
-              <p aria-label="Extra information about cezeri_1 project."><img src="./images/cezeri1.jpg" alt="cezeri flying gadget photo"></p>
+              <p aria-label="Extra information about cezeri_1 project."><img src="images/cezeri1.jpg" alt="cezeri flying gadget photo"></p>
             </div>
           <li><a id="prj3"  href="#">Flying Family By Cezeri</a></li>
             <div role="presentation" class="project" id="project3">
-              <p aria-label="Extra information about cezeri_2 project."><img src="./images/cezeri2.jpg" alt="cezeri flying family photo"></p>
+              <p aria-label="Extra information about cezeri_2 project."><img src="images/cezeri2.jpg" alt="cezeri flying family photo"></p>
             </div>
         </ul>
       </div>
