--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>      
       </div>     
 
-      <div id="projects">
+      <section id="projects">
         <h2>Projects</h2>
         <ul role="presentation">
           <li><a id="prj1" href="#">Hamidiye Bridge</a></li>
@@ -52,10 +52,14 @@
               <p aria-label="Extra information about cezeri_2 project."><img src="/images/cezeri2.jpg" alt="cezeri flying family photo"></p>
             </div>
         </ul>
-      </div>
-      <div id="skills">
+      </section>
+      <section id="skills">
         <h2>Skills</h2>
-      </div>
+
+      </section>
+      <footer>
+
+      </footer>
   </main>  
 </body>
 </html>
